<resources>
    <string name="app_name">TrainingTracker</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login">Sign in</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="accountHint">Hint: Sami / pwd</string>

    <string name="addNewExercise">Add new exercise</string>
    <string name="addDate"><u>Date</u></string>
    <string name="addParticipants"><u>Participants</u></string>
    <string name="addHours"><u>Hours</u></string>
    <string name="addLocation"><u>Location</u></string>
    <string name="addNewExerciseButton">Add</string>

    <string name="selectParticipants">Select participants</string>

    <string name="set">Set</string>

    <string name="allMustBeSet">All resources must be set</string>
    <string name="somethingWentTerriblyWrong">Something went terribly wrong</string>
    <string name="participantsMustBeSet">At least one participant must be set</string>

    <string name="exercises">Exercises</string>
    <string name="main">Main</string>

    <string name="latestExercise">Latest exercise</string>
</resources>
