<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textViewLogin"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textViewLogin"
        android:inputType="textEmailAddress"
        android:hint="@string/usernameHint"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textGrey"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:hint="@string/passwordHint"
        android:layout_below="@+id/editTextUsername"
        android:textColor="@color/textGrey"
        />

    <TextView
        android:id="@+id/accountHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTextPassword"
        android:text="@string/accountHint"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountHint"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/textGrey"
        />

</RelativeLayout>