<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/backgroundColor"
    android:id="@+id/container">

    <TextView
        android:id="@+id/trainingTrackerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="left|top"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/addNewExerciseText"
        android:text="@string/addNewExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        />

    <TableRow
        android:id="@+id/addNewExerciseSelectors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addNewExerciseText"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/addDateText"
            android:text="@string/addDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/textGrey"
            android:textSize="20sp"
            android:onClick="selectDate"
            />

        <TextView
            android:id="@+id/addParticipantsText"
            android:text="@string/addParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/textGrey"
            android:layout_toRightOf="@+id/addDateText"
            android:textSize="20sp"
            android:onClick="selectParticipants"
            />

        <TextView
            android:id="@+id/addHoursText"
            android:text="@string/addHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/textGrey"
            android:layout_toRightOf="@+id/addParticipantsText"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/addLocationText"
            android:text="@string/addLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/textGrey"
            android:layout_toRightOf="@+id/addHoursText"
            android:textSize="20sp"
            />
    </TableRow>

    <TextView
        android:id="@+id/dateSetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addNewExerciseSelectors"
        android:textSize="15sp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/addNewExerciseButton"
        android:text="@string/addNewExerciseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateSetText"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textGrey"
        android:onClick="addNewExercise"
        />


</RelativeLayout>
