<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context="fi.sami.trainingtracker.ExercisesActivity"
    android:id="@+id/exercisesLayout">

    <TextView
        android:id="@+id/trainingTrackerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="left|top"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/exercisesText"
        android:text="@string/exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exercisesText"
        android:layout_marginBottom="50dp"
        >

        <TextView
            android:id="@+id/exercisesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="15sp"
            android:textColor="@color/white"
            />
    </ScrollView>

    <Button
        android:id="@+id/goToExercisesButton"
        android:text="@string/main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/textGrey"
        android:onClick="goToMain"
        />

</RelativeLayout>
